infrastructure/istio/virtual-services.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sample-app-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - sample-app-gateway
  http:
  - match:
    - uri:
        prefix: /sample-app
    rewrite:
      uri: /
    route:
    - destination:
        host: sample-app
        port:
          number: 80
